# VISION_AI_C-

./: .gitignore  CMakeLists.txt  README.md  deploy_release.ps1  installer.iss
.github/workflows/: build.yml
data/: agent_memory.json  gpu_config.json  presets.json  user_behavior.json  vision_config.json
include/: action_executor.h  agent_memory.h  ai_backend.h  audio_capture.h  chat_widget.h  cloud_backend.h  context_manager.h  doctor.h  file_manager.h  gpu_setup_wizard.h  instruction_translator.h  llm_controller.h  local_backend.h  model_downloader_wizard.h  react_agent.h  safety_guard.h  screen_observer.h  settings_dialog.h  system_commands.h  ui_automation.h  vector_memory.h  vision_ai.h  web_search.h  whisper_engine.h  window_manager.h
include/ai/: ai_backend.h  cloud_backend.h  command_router.h  fast_complex_handler.h  llm_controller.h  local_backend.h
include/automation/: action_executor.h  device_profiler.h  react_agent.h
include/core/: confidence_scorer.h  config_manager.h  safety_guard.h  smart_template_matcher.h  update_manager.h  user_behavior.h
include/memory/: document_parser.h  vector_memory.h
include/plugins/: i_action_plugin.h  plugin_loader.h
include/ui/: chat_widget.h  settings_dialog.h  vision_ai.h  voice_visualizer.h
include/vision/: screen_observer.h  timeline_logger.h
include/voice/: AudioCapture.h  VoiceManager.h  WhisperEngine.h
src/: action_executor.cpp  agent_memory.cpp  audio_capture.cpp  chat_widget.cpp  cloud_backend.cpp  command_router.cpp  config_manager.cpp  context_manager.cpp  device_profiler.cpp  fast_complex_handler.cpp  instruction_translator.cpp  llm_controller.cpp  local_backend.cpp  main.cpp  model_downloader_wizard.cpp  react_agent.cpp  safety_guard.cpp  screen_observer.cpp  settings_dialog.cpp  system_commands.cpp  ui_automation.cpp  user_behavior.cpp  vector_memory.cpp  vision_ai.cpp  web_search.cpp  whisper_engine.cpp  window_manager.cpp
src/ai/: cloud_backend.cpp  fast_complex_handler.cpp  llm_controller.cpp  local_backend.cpp
src/automation/: action_executor.cpp  device_profiler.cpp  file_manager.cpp  gpu_setup_wizard.cpp  react_agent.cpp  system_commands.cpp  ui_automation.cpp
src/core/: confidence_scorer.cpp  config_manager.cpp  doctor.cpp  safety_guard.cpp  smart_template_matcher.cpp  update_manager.cpp  user_behavior.cpp  web_search.cpp
src/memory/: document_parser.cpp  vector_memory.cpp
src/plugins/: plugin_loader.cpp
src/plugins/media_plugin/: media_plugin.cpp
src/plugins/web_plugin/: web_plugin.cpp
src/ui/: chat_widget.cpp  settings_dialog.cpp  vision_ai.cpp  voice_visualizer.cpp
src/vision/: screen_observer.cpp  timeline_logger.cpp
src/voice/: AudioCapture.cpp  VoiceManager.cpp  WhisperEngine.cpp
tests/: CMakeLists.txt  test_command_router.cpp  test_vector_memory.cpp
